correct some fixtures + add overflow to loader + margin to avatar for team stack

--- a/packages/@coorpacademy-components/src/template/app-racing/game/status/team.css
+++ b/packages/@coorpacademy-components/src/template/app-racing/game/status/team.css
@@ -27,6 +27,7 @@
 
 .loader {
   position: absolute;
+  overflow: hidden;
 }
 
 .initial {
